FIX: Strip down HTML when copying from chat view

BUG: 269996
REVIEW: David Edmundson

set the "setAcceptRichText" to false so we don't accept anything unwanted apart from normal text